# crates/goose-server/src/openapi.rs
@@ -402,6 +402,8 @@ derive_utoipa!(IconTheme as IconThemeSchema);
         super::routes::config_management::get_provider_models,
         super::routes::config_management::get_provider_model_info,
         super::routes::config_management::get_slash_commands,
+        super::routes::config_management::get_mcp_skill_servers,
+        super::routes::config_management::set_extension_skills_enabled,
         super::routes::config_management::upsert_permissions,
         super::routes::config_management::create_custom_provider,
         super::routes::config_management::get_custom_provider,
@@ -497,6 +499,8 @@ derive_utoipa!(IconTheme as IconThemeSchema);
         super::routes::config_management::SlashCommandsResponse,
         super::routes::config_management::SlashCommand,
         super::routes::config_management::CommandType,
+        super::routes::config_management::SetSkillsEnabledRequest,
+        goose::agents::extension_manager::McpSkillServerSummary,
         super::routes::config_management::ExtensionResponse,
         super::routes::config_management::ExtensionQuery,
         super::routes::config_management::ToolPermission,
